crates/teleprompt-compile/tests/snapshots/manifest__the_manifest_json_shape_with_beats_is_stable.snap
---
source: crates/teleprompt-compile/tests/manifest.rs
expression: manifest_for(ONE_BLOCK_SPLIT_BY_A_MARK)
---
{
  "manifest_version": 2,
  "script": "tour.md",
  "locale": "en",
  "generated_by": "teleprompt 0.1.0",
  "duration_ms": 5900,
  "audio": {
    "format": "wav",
    "sample_rate": 48000,
    "channels": 1
  },
  "chapters": [
    {
      "id": "quick-start",
      "title": "Quick start",
      "start_ms": 150
    }
  ],
  "segments": [
    {
      "id": "intro",
      "text": "Every video in this repository is built from a script you can read.",
      "chapter": "quick-start",
      "start_ms": 150,
      "duration_ms": 5550,
      "duration_source": "estimated",
      "audio": "audio/intro.wav",
      "voice_source": "synthetic",
      "voice_source_actual": "synthetic",
      "downgrade_reason": null,
      "source_hash": "0fbee1f07d14ecc98c3ef11c61679dbd7e8323d8f88c8c77158f8bf7976f065c",
      "audio_hash": "76694f014a7308ccf908fb1b09257664d33aac066cfd824a5c6e0767dabde845"
    }
  ],
  "beats": [
    {
      "span": "intro-a#0",
      "segment": "intro",
      "scene": "mock",
      "adapter": "mock",
      "start_ms": 0,
      "duration_ms": 500,
      "duration_source": "exact",
      "policy": "concurrent",
      "transition": {
        "kind": "crossfade",
        "duration_ms": 150
      },
      "span_hash": "4057dd5c308ea0fb5dcf8d6ab5e5c7cf86559417bcc6e30c50580b80901128eb",
      "capture_key": "5ae16c31e88ebdd9594ab05088aa8d16c2688456c7f2f9347c4905a47a56b398"
    },
    {
      "span": "intro-a#1",
      "segment": null,
      "scene": "mock",
      "adapter": "mock",
      "start_ms": 5700,
      "duration_ms": 200,
      "duration_source": "exact",
      "policy": "concurrent",
      "transition": {
        "kind": "crossfade",
        "duration_ms": 0
      },
      "span_hash": "8582c7f96226778c8a046c0ad9b08be614e9e287364041b7fe00b89038f68784",
      "capture_key": "4d161b2caaee7029ca1d880a2900bf0243ccd2bf2176465da84f3588a7edea2b"
    }
  ]
}
