crates/teleprompt-compile/tests/snapshots/manifest__the_manifest_json_shape_with_shots_is_stable.snap
---
source: crates/teleprompt-compile/tests/manifest.rs
expression: manifest_for(ONE_BLOCK_SPLIT_BY_A_MARK)
---
{
  "manifest_version": 3,
  "script": "tour.md",
  "locale": "en",
  "generated_by": "teleprompt 0.1.0",
  "duration_ms": 5900,
  "audio": {
    "format": "wav",
    "sample_rate": 48000,
    "channels": 1
  },
  "chapters": [
    {
      "id": "quick-start",
      "title": "Quick start",
      "start_ms": 150
    }
  ],
  "lines": [
    {
      "id": "intro",
      "text": "Every video in this repository is built from a script you can read.",
      "chapter": "quick-start",
      "start_ms": 150,
      "duration_ms": 5550,
      "duration_source": "estimated",
      "audio": "audio/intro.wav",
      "source_hash": "0fbee1f07d14ecc98c3ef11c61679dbd7e8323d8f88c8c77158f8bf7976f065c",
      "audio_hash": "76694f014a7308ccf908fb1b09257664d33aac066cfd824a5c6e0767dabde845"
    }
  ],
  "shots": [
    {
      "shot": "intro-a#0",
      "line": "intro",
      "scene": "mock",
      "plugin": "mock",
      "start_ms": 0,
      "duration_ms": 500,
      "duration_source": "exact",
      "policy": "concurrent",
      "transition": {
        "kind": "crossfade",
        "duration_ms": 150
      },
      "shot_hash": "4057dd5c308ea0fb5dcf8d6ab5e5c7cf86559417bcc6e30c50580b80901128eb",
      "capture_key": "0d303ad6b9eaa5e00250e084b1266fb7bd0a7917a338efd8a3f0a3e90018338a"
    },
    {
      "shot": "intro-a#1",
      "line": null,
      "scene": "mock",
      "plugin": "mock",
      "start_ms": 5700,
      "duration_ms": 200,
      "duration_source": "exact",
      "policy": "concurrent",
      "transition": {
        "kind": "crossfade",
        "duration_ms": 0
      },
      "shot_hash": "8582c7f96226778c8a046c0ad9b08be614e9e287364041b7fe00b89038f68784",
      "capture_key": "0ce51ea62353493cd373cbdf3282065c3fcd590309040d05c04e49add0b6e226"
    }
  ]
}
